-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.10.0 RC
-
None
-
-
ae88ad1a1 (dev), 461f30bf0 (6.10)
Trying to open Calqlatr example executable after using cm install with Qt 6.10.0 llvm results to a System error.
The pop up error messages:
The code execution cannot proceed because libc++.dll was not found. Reinstalling the program may fix this problem. The code execution cannot proceed because libunwind.dll was not found. Reinstalling the program may fix this problem.
- is required for
-
QTBUG-136539
Add deployment to application examples
-
- Open
-
| For Gerrit Dashboard: QTBUG-140789 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 682660,5 | windeployqt: Enable deployment of compiler runtime for mingw/clang | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 688619,2 | windeployqt: Enable deployment of compiler runtime for mingw/clang | 6.10 | qt/qtbase | Status: MERGED | +2 | 0 |