src/tools/windeployqt/main.cpp
@@ -571,15 +571,17 @@ static inline int parseArguments(const QStringList &arguments, QCommandLineParse
     options->quickImports = !parser->isSet(noQuickImportOption);
 
     // default to deployment of compiler runtime for windows desktop configurations
-    if (options->platform == WindowsDesktopMinGW || options->platform.testFlags(WindowsDesktopMsvc)
-            || parser->isSet(compilerRunTimeOption))
+    if (options->platform == WindowsDesktopMinGW || options->platform == WindowsDesktopClangMinGW
+        || options->platform.testFlags(WindowsDesktopMsvc) || parser->isSet(compilerRunTimeOption))
         options->compilerRunTime = true;
     if (parser->isSet(noCompilerRunTimeOption))
         options->compilerRunTime = false;
 
     if (options->compilerRunTime && options->platform != WindowsDesktopMinGW
+        && options->platform != WindowsDesktopClangMinGW
         && !options->platform.testFlags(WindowsDesktopMsvc)) {
-        *errorMessage = QStringLiteral("Deployment of the compiler runtime is implemented for Desktop MSVC/g++ only.");
+        *errorMessage = QStringLiteral("Deployment of the compiler runtime is implemented for "
+            "Desktop MSVC and MinGW (g++ and Clang) only.");
         return CommandLineParseError;
     }
 
